# imx8mp_m7_led_demo

./: FreeRTOSConfig.h  _readme.txt  common.h  i2c_task.c  i2c_task.h  main.c  rpmsg_task.c  rpmsg_task.h  uart_commands.c  uart_task.c  uart_task.h  wdog.c  wdog.h
armgcc/: CMakeLists.txt  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  config.cmake  flags.cmake
board_cfg/: board.h  pin_mux.c
kernel_device_tree/: _readme.txt  imx8mp-phyboard-pollux-rdk-rpmsg-without-i2c2.dts  imx8mp-phyboard-pollux-rdk-rpmsg.dts  imx8mp-phyboard-pollux-without-i2c2.dtsi
kernel_modules/: _readme.txt  imx_rpmsg_connector.c
